nodejs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs-app
  type: ClusterIP
